<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Home Cloud</string>
    <string name="txt_bienvenida">Bienvenido/a</string>
    <string name="iniciar_sesion">Iniciar Sesión</string>
    <string name="cerrar_sesion">Cerrar Sesión</string>
    <string name="txt_cargando">Cargando…</string>
    <string name="txt_email">E-Mail</string>
    <string name="txt_contrasena">Contraseña</string>
    <string name="txt_registrarse">¿No tiene cuenta? Regístrese</string>
    <string name="txt_crearperfil">Crea tu perfil</string>
    <string name="txt_acercade_tituloApp">Aplicación móvil para la gestión de servicios comunitarios en urbanizaciones.</string>
    <string name="txt_acercade_autorApp">Jacques Michael Mendieta Herrera</string>
    <string name="txt_acercade_tfgApp">Trabajo Final de Grado</string>
    <string name="txt_acercade_fechaApp">© 2022 – 2023</string>
    <string name="txt_fecha_incidencia">Fecha</string>
    <string name="toggle_password_visibility">password</string>
    <string name="btn_cancelar">Cancelar</string>
    <string name="btn_continuar">Continuar</string>
    <string name="txt_titulo_perfil">Mi perfil</string>
    <string name="txt_img_vecino">Imagen vecino</string>
    <string name="btn_perfil_modificar">Modificar</string>
    <string name="txt_modificar">Modificar perfil</string>
    <string name="btn_actualizar_perfil">Actualizar</string>
    <string name="ic_tick">img_confirmado</string>
    <string name="lbl_usuario">Usuario</string>
    <string name="lbl_contrasenya">Contraseña</string>
    <string name="lbl_nombre">Nombre</string>
    <string name="lbl_apellidos">Apellidos</string>
    <string name="lbl_dni">DNI</string>
    <string name="lbl_telefono">Teléfono</string>
    <string name="lbl_correo">Correo</string>
    <string name="lbl_direccion">Dirección</string>
    <string name="lbl_portal">Portal</string>
    <string name="lbl_puerta">Puerta</string>
    <string name="lbl_localidad">Localidad</string>
    <string name="lbl_provincia">Provincia</string>
    <string name="lbl_cp">Código Postal</string>
    <string name="txt_rgpd">No recolectamos datos. Los datos pertenecen a su comunidad. \nConozca sus derechos: </string>
    <string name="txt_usuarioperfil">Introduzca su Usuario</string>
    <string name="txt_usuariohint">Vecino2023</string>
    <string name="txt_contrasenaperfil">Introduzca su Contraseña</string>
    <string name="txt_contrasenahint">Contraseña</string>
    <string name="txt_nombreperfil">Introduzca su Nombre</string>
    <string name="txt_nombrehint">Jacques</string>
    <string name="txt_apellidoperfil">Introduzca sus Apellidos</string>
    <string name="txt_apellidoshint">Mendieta</string>
    <string name="txt_edadperfil">Introduzca su Edad</string>
    <string name="txt_edadhint">22</string>
    <string name="txt_dniperfil">Introduzca su DNI</string>
    <string name="txt_dnihint">012345678A</string>
    <string name="txt_telefonoperfil">Introduzca su Teléfono</string>
    <string name="txt_telefonohint">123456789</string>
    <string name="txt_correoperfil">Introduzca su Correo</string>
    <string name="txt_correohint">hola@dominio.com</string>
    <string name="txt_direccionperfil">Introduzca su Dirección</string>
    <string name="txt_direccionhint">Calle del puerto</string>
    <string name="txt_portalperfil">Introduzca su Portal</string>
    <string name="txt_portalhint">23</string>
    <string name="txt_puertaperfil">Introduzca su Puerta</string>
    <string name="txt_puertahint">1</string>
    <string name="txt_localidadperfil">Introduzca su Localidad</string>
    <string name="txt_localidadhint">Alboraya</string>
    <string name="txt_provinciaperfil">Introduzca su Provincia</string>
    <string name="txt_provinciahint">Valencia</string>
    <string name="txt_cpperfil">Introduzca su Código Postal</string>
    <string name="txt_cphint">46900</string>
    <string name="txt_fotoperfil">Subir foto de perfil (Opcional)</string>
    <string name="txt_aguaperfil">Dirección</string>
    <string name="txt_luzperfil">Localidad</string>
    <string name="txt_comunidadperfil">Comunidad</string>
    <string name="txt_hola">¡Hola!</string>
    <string name="txt_usuario">Usuario</string>
    <string name="txt_pagos">Pagos</string>
    <string name="txt_recibos">Historial de Recibos</string>
    <string name="txt_actividades">Actividades</string>
    <string name="txt_notificaciones_y_mas">Notificaciones y Más</string>
    <string name="txt_seleccion_servicio">Selecciona el servicio</string>
    <string name="txt_seleccion_proveedor">Selecciona el proveedor</string>
    <string name="txt_agua">Agua</string>
    <string name="txt_servicioAgua1">Aguas de Valencia</string>
    <string name="txt_luz">Luz</string>
    <string name="txt_servicioLuz1">Iberdrola</string>
    <string name="txt_servicioLuz2">Endesa</string>
    <string name="txt_servicioLuz3">Naturgy</string>
    <string name="txt_servicioLuz4">Holaluz</string>
    <string name="txt_servicioLuz5">Lucera</string>
    <string name="txt_servicioLuz6">Repsol</string>
    <string name="txt_comunidad">Comunidad</string>
    <string name="txt_otro">Otro</string>
    <string name="txt_pagoAgua">Pago de agua</string>
    <string name="txt_pagoLuz">Pago de luz</string>
    <string name="txt_pagoComunidad">Pago de comunidad</string>
    <string name="txt_metodoPago">Selecciona el método de pago</string>
    <string name="txt_etiqueta_nombre_tarjeta">Nombre completo</string>
    <string name="txt_nombre_default">John Doe</string>
    <string name="txt_nombre_completo">Jacques Michael Mendieta Herrera</string>
    <string name="txt_etiqueta_numero_tarjeta">Número tarjeta crédito/debito</string>
    <string name="txt_numero_tarjeta">**** **** **** 1836</string>
    <string name="txt_numero_tarjeta2">**** **** **** ****</string>
    <string name="img_tarjeta_credito">Tarjeta de Crédito</string>
    <string name="txt_etiqueta_cvv_tarjeta">CVV</string>
    <string name="txt_etiqueta_cvvhint_tarjeta">***</string>
    <string name="txt_etiqueta_caducidad_tarjeta">Caducidad</string>
    <string name="txt_etiqueta_caducidadhint_tarjeta">MM/AA</string>
    <string name="txt_importe_pago_comunidad" tools:ignore="Typos">Importe anual 2023–2024: </string>
    <string name="txt_importe_pago_comunidad2" tools:ignore="Typos">45</string>
    <string name="txt_importe_pago_comunidad3" tools:ignore="Typos">€</string>
    <string name="txt_pago_comunidad_realizado">Pago confirmado</string>
    <string name="img_pago_comunidad_realizado">Tick</string>
    <string name="txt_pago_comunidad_realizado2">Acabas de realizar el pago del recibo de comunidad
    con un importe de 45€</string>
    <string name="txt_pago_comunidad_realizado3">Para ver el estado de los recibos, visita el
    apartado de "Historial de Recibos"</string>
    <string name="txt_pago_comunidad_realizado4">> Ir a "Historial de Recibos"</string>
    <string name="btn_menu_principal">Menú principal</string>
    <string name="txt_telefonia">Telefonía</string>
    <string name="txt_pagoTelefonia">Pago de telefonía</string>
    <string name="txt_servicioTelefonia1">Movistar</string>
    <string name="txt_servicioTelefonia2">Vodafone</string>
    <string name="txt_servicioTelefonia3">Orange</string>
    <string name="txt_servicioTelefonia4">Jazztel</string>
    <string name="txt_servicioTelefonia5">Simyo</string>
    <string name="txt_servicioTelefonia6">PTV</string>
    <string name="txt_servicioRecibo">Servicio: </string>
    <string name="txt_fechaRecibo">Fecha: </string>
    <string name="txt_importeRecibo">Importe(€): </string>
    <string name="txt_tarjetaRecibo">Núm. Tarjeta: </string>
    <string name="Actividades">Actividades</string>
    <string name="txt_seleccion_actividad">Selecciona la actividad</string>
    <string name="txt_padel">Pádel</string>
    <string name="txt_tenis">Tenis</string>
    <string name="txt_futbol">Fútbol</string>
    <string name="txt_basket">Baloncesto</string>
    <string name="txt_piscina">Piscina</string>
    <string name="txt_reservas">Reservas</string>
    <string name="txt_horarios">Horarios</string>
    <string name="txt_consultar_reservas">Consultar Reservas</string>
    <string name="txt_consultar_mis_reservas">Mis Reservas</string>
    <string name="txt_horariopadelgeneral">Horario General: 7:00 a.m - 12:00 a.m</string>
    <string name="txt_horariotenisgeneral">Horario General: 7:00 a.m - 12:00 a.m</string>
    <string name="txt_horariofutbolgeneral">Horario General: 8:00 a.m - 23:30 p.m</string>
    <string name="txt_horariobaloncestogeneral">Horario General: 8:00 a.m - 23:30 p.m</string>
    <string name="txt_horarios_disponibles">Seleccione una fecha y horario disponible</string>
    <string name="txt_fecha_reserva">Fecha</string>
    <string name="txt_cancelar_reserva">Cancelar</string>
    <string name="txt_confirmar_reserva">Confirmar</string>
    <string name="txt_horario1">8:00 AM - 10:00 AM</string>
    <string name="txt_horario2">10:00 AM - 12:00 PM</string>
    <string name="txt_horario3">12:00 PM - 14:00 PM</string>
    <string name="txt_horario4">14:00 PM - 16:00 PM</string>
    <string name="txt_horario5">16:00 PM - 18:00 PM</string>
    <string name="txt_horario6">18:00 PM - 20:00 PM</string>
    <string name="txt_horario7">20:00 PM - 22:00 PM</string>
    <string name="txt_tipoReserva">Actividad: </string>
    <string name="txt_franjaReserva">Hora: </string>
    <string name="txt_fechaReserva">Fecha: </string>
    <string name="img_papelera">Papelera </string>
    <string name="txt_sinReservas">No hay reservas realizadas.</string>
    <string name="txt_vernotificaciones">Ver Notificaciones</string>
    <string name="txt_notificaciones">Notificaciones</string>
    <string name="txt_usuarioNotif">Usuario: </string>
    <string name="txt_asuntoNotif">Asunto: </string>
    <string name="txt_mensajeNotif">Mensaje: </string>
    <string name="txt_fechaNotif">Fecha: </string>
    <string name="txt_notifincidencia">Reportar Incidencia</string>
    <string name="txt_txtrepincidencia">Escribe tu sugerencia, incidencia o comentario aquí</string>
    <string name="txt_acercade">Acerca de</string>
    <string name="txt_enviar_incidencia">Enviar</string>
    <string name="txt_tipo_incidencia">Tipo de incidencia</string>
    <string-array name="tipo_incidencia">
        <item>Tipo de incidencia</item>
        <item>General</item>
        <item>Reservas</item>
        <item>Pistas</item>
        <item>Incendio</item>
        <item>Corte de luz</item>
        <item>Fuga de agua</item>
        <item>Mejoras</item>
        <item>Sugerencias</item>
        <item>Quejas</item>
    </string-array>
    <string name="txt_holaAdm">¡Hola!</string>
    <string name="txt_usuarioAdm">Usuario</string>
    <string name="txt_recibosAdm">Comprobar recibos</string>
    <string name="txt_actividadesAdm">Comprobar reservas</string>
    <string name="txt_notificaciones_y_masAdm">Notificaciones y Más</string>
    <string name="txt_modificarAdm">Modificar perfil administrador</string>
    <string name="txt_consultar_mis_recibosAdm">Consultar recibos</string>
    <string name="txt_reciboAdm">Consultar recibos</string>
    <string name="txt_sinRecibos">No hay recibos realizados.</string>
    <string name="txt_idReciboAdm">Identificador: </string>
    <string name="txt_consultar_mis_reservasAdm">Consultar reservas</string>
    <string name="imagenlogo">imagenlogo</string>
    <string name="imagenfondoprincipal">imagenfondoprincipal</string>
    <string name="botonAnterior">Volver</string>
    <string name="order_by_id">Ordenar por identificador</string>
    <string name="order_by_servicio_name">Ordenar por servicio</string>
    <string name="order_by_fecha">Ordenar por fecha</string>
    <string name="order_by_importe">Ordenar por importe</string>
    <string name="order_by_usuario">Ordenar por usuario</string>
</resources>