<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".ModificarDatosVecino">

    <TextView
        android:id="@+id/id_txt_recibos2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:gravity="center"
        android:text="@string/txt_modificarAdm"
        android:textColor="#000000"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/sv"
        android:layout_width="wrap_content"
        android:layout_height="471dp"
        android:layout_marginBottom="32dp"
        android:isScrollContainer="false"
        app:layout_constraintBottom_toTopOf="@+id/id_btn_volver_perfil"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/id_txt_recibos2">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="270dp">

            <androidx.cardview.widget.CardView
                android:id="@+id/cv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="30dp"
                app:cardCornerRadius="10dp"
                app:cardElevation="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/id_lblusuarioperfil"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:text="@string/txt_usuarioperfil"
                        android:textSize="14sp"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/id_inputusuario"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:autofillHints=""

                        android:hint="@string/txt_usuariohint"
                        android:inputType="text"
                        android:minHeight="48dp" />

                    <TextView
                        android:id="@+id/id_lblcontraperfil"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:text="@string/txt_contrasenaperfil"
                        android:textSize="14sp"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/id_inputcontrasena"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:autofillHints=""

                        android:hint="@string/txt_contrasenahint"
                        android:inputType="text"
                        android:minHeight="48dp" />

                    <TextView
                        android:id="@+id/id_lblnombreperfil"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:text="@string/txt_nombreperfil"
                        android:textSize="14sp"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/id_inputnombre"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:autofillHints=""

                        android:hint="@string/txt_nombrehint"
                        android:inputType="text"
                        android:minHeight="48dp" />

                    <TextView
                        android:id="@+id/id_lblapellidosperfil"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:text="@string/txt_apellidoperfil"
                        android:textSize="14sp"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/id_inputapellidos"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:autofillHints=""
                        android:hint="@string/txt_apellidoshint"
                        android:inputType="text"
                        android:minHeight="48dp" />

                    <TextView
                        android:id="@+id/id_lbldniperfil"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:text="@string/txt_dniperfil"
                        android:textSize="14sp"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/id_inputdni"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:autofillHints=""
                        android:hint="@string/txt_dnihint"
                        android:inputType="text"
                        android:maxLength="9"
                        android:minHeight="48dp"
                        tools:ignore="TextContrastCheck,TextContrastCheck" />

                    <TextView
                        android:id="@+id/id_lbltelefonoperfil"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:text="@string/txt_telefonoperfil"
                        android:textSize="14sp"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/id_inputtelefono"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:autofillHints=""
                        android:hint="@string/txt_telefonohint"
                        android:inputType="phone"
                        android:maxLength="9"
                        android:minHeight="48dp" />

                    <TextView
                        android:id="@+id/id_lblcorreoperfil"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:text="@string/txt_correoperfil"
                        android:textSize="14sp"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/id_inputcorreo"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:autofillHints=""
                        android:hint="@string/txt_correohint"
                        android:inputType="textEmailAddress"
                        android:minHeight="48dp"

                        tools:ignore="TextContrastCheck,TextContrastCheck" />

                    <TextView
                        android:id="@+id/id_lbldireccionperfil"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:text="@string/txt_direccionperfil"
                        android:textSize="14sp"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/id_inputdireccion"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:autofillHints=""
                        android:hint="@string/txt_direccionhint"
                        android:inputType="text"
                        android:minHeight="48dp"

                        tools:ignore="TextContrastCheck" />

                    <TextView
                        android:id="@+id/id_lbllocalidadperfil"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:text="@string/txt_localidadperfil"
                        android:textSize="14sp"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/id_inputlocalidad"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:autofillHints=""
                        android:hint="@string/txt_localidadhint"
                        android:inputType="text"
                        android:minHeight="48dp" />

                    <TextView
                        android:id="@+id/id_lblprovinciaperfil"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:text="@string/txt_provinciaperfil"
                        android:textSize="14sp"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/id_inputprovincia"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:autofillHints=""
                        android:hint="@string/txt_provinciahint"
                        android:inputType="text"
                        android:minHeight="48dp" />

                    <TextView
                        android:id="@+id/id_lblcpperfil"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:text="@string/txt_cpperfil"
                        android:textSize="14sp"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/id_inputcp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:autofillHints=""
                        android:hint="@string/txt_cphint"
                        android:inputType="number"
                        android:maxLength="5"
                        android:minHeight="48dp" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </RelativeLayout>
    </ScrollView>

    <Button
        android:id="@+id/id_btn_volver_perfil"
        android:layout_width="140sp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="48dp"
        android:backgroundTint="#FF6957"
        android:text="@string/btn_cancelar"
        android:textColor="#000"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.151"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/id_btn_registro_siguiente"
        android:layout_width="140sp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="48dp"
        android:backgroundTint="#C7FE80"
        android:onClick="actualizarCamposVecino"
        android:text="@string/btn_actualizar_perfil"
        android:textColor="#000"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.511"
        app:layout_constraintStart_toEndOf="@+id/id_btn_volver_perfil" />


</androidx.constraintlayout.widget.ConstraintLayout>