<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".MainActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/id_fondoprincipal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/fondoinicioprincipal"
            android:contentDescription="@string/imagenfondoprincipal" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_marginBottom="100dp"
                app:srcCompat="@drawable/logo"
                android:contentDescription="@string/imagenlogo" />

            <EditText
                android:id="@+id/idtxtUsuario"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:autofillHints=""
                android:backgroundTint="@color/colorBackground"
                android:drawableStart="@drawable/user_icon"
                android:ems="10"
                android:hint="@string/txt_usuario"
                android:inputType="textPersonName"
                android:textColorHint="#FFFFFF"
                android:textSize="20sp"
                tools:ignore="TextContrastCheck" />

            <EditText
                android:id="@+id/idtxtPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="8dp"
                android:autofillHints=""
                android:backgroundTint="@color/colorBackground"
                android:drawableStart="@drawable/icon_lock_contra"
                android:ems="10"
                android:hint="@string/txt_contrasena"
                android:inputType="textPassword"
                android:textColorHint="#FFFFFF"
                android:textSize="20sp"
                tools:ignore="TextContrastCheck" />

            <Button
                android:id="@+id/btnLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="30dp"
                android:layout_marginRight="15dp"
                android:background="#fff"
                android:text="@string/iniciar_sesion"
                android:textColor="@color/colorWhite"
                android:textSize="18sp"
                tools:ignore="TextContrastCheck" />

            <TextView
                android:id="@+id/id_lblregistrarse"
                android:layout_width="269dp"
                android:layout_height="48dp"
                android:layout_marginTop="30dp"
                android:onClick="registrarVecinoNuevo"
                android:text="@string/txt_registrarse"
                android:textColor="#F3EEEE"
                android:textColorHint="#FFFFFF"
                android:textSize="20sp"
                android:textStyle="bold" />

        </LinearLayout>

    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>